[tool.poetry]
name = "cardiodi-data-transform"
version = "0.1.0"
description = ""
authors = ["Jordan Engbers <jordan.engbers@cohesic.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
pandas = "^1.2.4"
numpy = "^1.20.2"
scipy = "^1.6.3"
matplotlib = "^3.4.1"
jupyter = "^1.0.0"
tqdm = "^4.60.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
